--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <nav class="navigation">
                 <div class="menu-icon"><img src="img/menu_circular_button_burger_icon_124214.ico" alt="menu"></div>
                 <ul class="menu">
+                    <li class="menu-item"><a class="section-link" href="#top">Home</a></li>
                     <li class="menu-item"><a class="section-link" href="#intro">Intro</a></li>
                     <li class="menu-item"><a class="section-link" href="#about">About me</a></li>
                     <li class="menu-item"><a class="section-link" href="#skills">Skills</a></li>
