fix(navigation): add id to content div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sebastian Muszalski - Portfolio</title>
 </head>
 <body>
-    <div class="content">
+    <div id="top" class="content">
         <header class="welcome">
             <h1 class="welcome-title">Sebastian Muszalski</h1>
             <p class="welcome-description">Software Developer</p>
