--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </article>
-            <hr>
+            <hr class="article-break">
             <article id="about">
                 <div class="article">
                     <header>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </article>
-            <hr>
+            <hr class="article-break">
             <article id="skills">
                 <div class="article">
                     <header>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </article>
-            <hr>
+            <hr class="article-break">
             <article id="projects" class="article">
                 <header>
                     <h3 class="article-title article-subtitle">My projects</h3>
@@ -135,8 +135,8 @@
                             <a href="#top" class="btn">Back to the top.</a>
                         </div>
                     </div>
+                    <hr class="section-break">
                 </section>
-                <hr>
                 <section id="wimb">
                     <div class="section">
                         <header>
@@ -159,8 +159,8 @@
                             <a href="#top" class="btn">Back to the top.</a>
                         </div>
                     </div>
+                    <hr class="section-break">
                 </section>
-                <hr>
                 <section id="stock-assistant-app">
                     <div class="section">
                         <header>
@@ -183,8 +183,8 @@
                             <a href="#top" class="btn">Back to the top.</a>
                         </div>
                     </div>
+                    <hr class="section-break">
                 </section>
-                <hr>
                 <section id="portfolio">
                     <div class="section">
                         <header>
@@ -210,7 +210,7 @@
                 </section>
                 <h3 class="article-ending">More comming soon</h3>
             </article>
-            <hr>
+            <hr class="article-break">
             <article id="after-hours">
                 <div class="article">
                     <header>
@@ -233,7 +233,7 @@
                     </div>
                 </div>
             </article>
-            <hr>
+            <hr class="article-break">
             <article id="contact">
                 <div class="article">
                     <header>
