fix: semantic and styles adjustments in contact section

--- a/index.html
+++ b/index.html
@@ -246,22 +246,47 @@
                     <header>
                         <h3 class="article-title">Contact</h3>
                     </header>
-                    <p class="article-content contact">
-                        If you wish to contact with me, send me a message to the one of following:<br>
-                        <img class='small-icon' src='img/gmail.png' alt='email'> <a href="mailto:muszalski.sebastian@gmail.com" class="inline-link">Mail me</a><br>
-                        <img class='small-icon' src='img/facebook.png' alt='facebook'> <a class='inline-link' href="https://www.facebook.com/sebastian.muszalski.3/">Facebook</a><br>
-                        <img class='small-icon' src='img/linkedin.png' alt='LinkedIn'> <a class='inline-link' href="https://www.linkedin.com/in/sebastian-muszalski/">LinkedIn</a><br>
-                        <br>or you can use this contact form:<br>
-                        <form class="contact-form contact">
-                            <textarea class="contact-message"></textarea><br>
-                            <input type="submit" class="btn" value="Send">
-                        </form>
-                    </p>
-                    <p class="article-content contact">
-                        <br><br>You can also follow me here:<br>
-                        <img class='small-icon' src='img/instagram.png' alt='Instagram'> <a class='inline-link' href="https://www.instagram.com/arethius3/">Instagram</a><br>
-                        <img class='small-icon' src='img/github.png' alt='GitHub'> <a class='inline-link' href="https://github.com/Enessetere">GitHub</a>
-                    </p>
+                    <div class="article-content contact">
+                        <p class="contact-text">If you wish to contact with me, send me a message to the one of following:</p>
+                        <ul class="contact-list">
+                            <li class="contact-list-item">
+                                <figure class="contact-list-icon">
+                                    <img class='small-icon' src='img/gmail.png' alt='email'>
+                                </figure> <a href="mailto:muszalski.sebastian@gmail.com" class="inline-link">Mail me</a>
+                            </li>
+                            <li class="contact-list-item">
+                                <figure class="contact-list-icon">
+                                    <img class='small-icon' src='img/facebook.png' alt='facebook'>
+                                </figure> <a class='inline-link' href="https://www.facebook.com/sebastian.muszalski.3/">Facebook</a>
+                            </li>
+                            <li class="contact-list-item">
+                                <figure class="contact-list-icon">
+                                    <img class='small-icon' src='img/linkedin.png' alt='LinkedIn'>
+                                </figure> <a class='inline-link' href="https://www.linkedin.com/in/sebastian-muszalski/">LinkedIn</a>
+                            </li>
+                        </ul>
+                        <p class="contact-text">or you can use this contact form:</p>
+                    </div>
+                    <form class="contact-form contact">
+                        <textarea class="contact-message"></textarea><br>
+                        <input type="submit" class="btn" value="Send">
+                    </form>
+                    <div class="article-content contact">
+                        <p class="contact-text">You can also follow me here:</p>
+
+                        <ul class="contact-list">
+                            <li class="contact-list-item">
+                                <figure class="contact-list-icon">
+                                    <img class='small-icon' src='img/instagram.png' alt='Instagram'>
+                                </figure> <a class='inline-link' href="https://www.instagram.com/arethius3/">Instagram</a>
+                            </li>
+                            <li class="contact-list-item">
+                                <figure class="contact-list-icon">
+                                    <img class='small-icon' src='img/github.png' alt='GitHub'>
+                                </figure> <a class='inline-link' href="https://github.com/Enessetere">GitHub</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </article>
         </main>
