fix: change layout display on small resolution screen

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <main>
             <nav>
                 <div class="jump-top links">
-                    <a href="#top" class="btn">&uarr; Top &uarr;</a>
+                    <a href="#top" class="btn ">&uarr; Top &uarr;</a>
                 </div>
             </nav>
             <article id="intro">
@@ -46,7 +46,7 @@
                     </header>
                     <p class="article-content">
                         Hey, I'm glad that you found my website.<br>
-                        It's purpose is to present myself as Software Developer and to present my development skills in back-end and front-end application
+                        Its purpose is to present myself as Software Developer and to present my development skills in back-end and front-end application
                         development. I hope that you will like this page, and if you will be interested in exchange knowledge or have some
                         propositions or suggestions, feel free to contact with me. All contact forms You can find in <a class="inline-link" href="#contact">contact</a> section.    
                     </p>
